apply .env to subfolders files

--- a/microcontroller/server/main.ipynb
+++ b/microcontroller/server/main.ipynb
@@ -7,6 +7,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from dotenv import dotenv_values\n",
+    "config = dotenv_values('../../.env')\n",
     "from http.server import BaseHTTPRequestHandler, HTTPServer\n",
     "from urllib.parse import urlparse, parse_qs\n",
     "import sqlite3\n",
@@ -14,7 +16,8 @@
     "from datetime import datetime\n",
     "import pytz\n",
     "import hashlib\n",
-    "import random"
+    "import random\n",
+    "import time"
    ]
   },
   {
@@ -35,12 +38,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class GlobalOperations:\n",
-    "    def __init__(self):\n",
-    "        self.tz = pytz.timezone('Asia/Jakarta')\n",
-    "    \n",
+    "class GlobalOperations:   \n",
     "    def datetime_now(self):\n",
-    "        return datetime.now(self.tz)\n",
+    "        tz = pytz.timezone('Asia/Jakarta')\n",
+    "        return datetime.now(tz)\n",
     "    \n",
     "    def gethash(self, string):\n",
     "        '''sha256'''\n",
@@ -50,7 +51,8 @@
     "        return hashlib.sha256(bytes(string, 'utf-8')).hexdigest()\n",
     "\n",
     "class Sqlite(GlobalOperations):\n",
-    "    def __init__(self):\n",
+    "    def __init__(self, *args, **kwargs):\n",
+    "        super().__init__(*args, **kwargs)\n",
     "        self.conn = None\n",
     "        self.table = None\n",
     "        \n",
@@ -63,28 +65,51 @@
     "        except Error as e:\n",
     "            print(f'Failed to create connection. {e}')\n",
     "    \n",
-    "    def insert_value(self, cols, values):\n",
-    "        # Sanity check\n",
-    "        if self.conn != None & self.table != None:\n",
-    "            if not all(isinstance(i, list) for i in [cols, values]):\n",
-    "                cols_insert = ','.join(cols)\n",
-    "                data_placeholder = ['?' for _ in cols]\n",
-    "                data_placeholder_insert = ','.join(data_placeholder)\n",
-    "                values_insert = f'{self.datetime_now().timestamp()}' + ','.join(values)\n",
-    "                sql = f'''insert into {self.table} (datetime, {cols_insert}) values ('?',{data_placeholder_insert})'''\n",
+    "    def create_table(self, col_dtypes):\n",
+    "        sql = f'''create table if not exists {self.table} ({col_dtypes})'''\n",
+    "        cur = self.conn.cursor()\n",
+    "        cur.execute(sql)\n",
+    "    \n",
+    "    def insert_value(self, cols, values):            \n",
+    "        if isinstance(self.conn, sqlite3.Connection) & isinstance(self.table, str):\n",
+    "            if all(isinstance(i, list) for i in [cols, values]):\n",
+    "                cols_all = ['datetime']\n",
+    "                data_placeholders = ['?']\n",
+    "                values_all = [f\"'{str(self.datetime_now().timestamp())}'\"]\n",
+    "                values_all = [str(self.datetime_now().timestamp())]\n",
+    "                col_dtypes_bind = ['datetime float']\n",
+    "                \n",
+    "                for i, col in enumerate(cols):\n",
+    "                    cols_all.append(col)\n",
+    "                    data_placeholders.append('?')\n",
+    "                    # values_all.append(f\"'{values[i]}'\")\n",
+    "                    values_all.append(values[i])\n",
+    "                    col_dtypes_bind.append(f'{col} int')\n",
+    "                      \n",
+    "                cols_insert = ','.join(cols_all)\n",
+    "                data_placeholder_insert = ','.join(data_placeholders)\n",
+    "                values_insert = ','.join(values_all)\n",
+    "                # print(values_insert)\n",
+    "                col_dtypes_bind_insert = ','.join(col_dtypes_bind)\n",
+    "                \n",
+    "                # Create table if not exists\n",
+    "                self.create_table(col_dtypes_bind_insert)\n",
+    "                \n",
+    "                sql = f'''insert into {self.table} ({cols_insert}) values ({data_placeholder_insert})'''\n",
+    "                # print(sql)\n",
     "                cur = self.conn.cursor()\n",
-    "                cur.execute(sql, values_insert)\n",
+    "                cur.execute(sql, values_all)\n",
     "                self.conn.commit()\n",
     "            else:\n",
     "                print('Makesure that colnames is in python list format `[...,...,...]`')\n",
     "        else:\n",
     "            print('Please initialize connection and table name first.')\n",
     "    \n",
-    "    \n",
-    "class Vibrateserver(Sqlite, BaseHTTPRequestHandler):\n",
-    "    def __init__(self):\n",
+    "class VibrateProcessor(Sqlite):\n",
+    "    def __init__(self, *args, **kwargs):\n",
+    "        super().__init__(*args, **kwargs)\n",
     "        self.root_dir = os.getcwd()\n",
-    "        self.db = 'records.db'\n",
+    "        self.db = config['VIBRATION_RECORDS_DB']\n",
     "        \n",
     "        self.db_path = os.path.join(self.root_dir, self.db)\n",
     "\n",
@@ -93,66 +118,100 @@
     "            'two_entry':['left_sensor','right_sensor'],\n",
     "            'one_perimeter':['carport_perimeter','large_gate','small_gate','garden_fence','garden_outer_perimeter'],\n",
     "            'one_main':['parlor_window','main_door_upper','main_door_lower'],\n",
-    "            'one_hallway':['hallway_door','hallway_window','kitchen_lamp_switch','outdoor_lamp_switch','parlor_lamp_switch']\n",
+    "            'one_hallway':['hallway_door','hallway_window']\n",
     "        }\n",
     "        self.out_gb = 0\n",
     "        self.out_sw = {\n",
+    "            'two_corner':{\n",
+    "                'reset_trigger':0,\n",
+    "            },\n",
+    "            'two_entry':{\n",
+    "                'reset_trigger':0,\n",
+    "            },\n",
+    "            'one_perimeter':{\n",
+    "                'reset_trigger':0,\n",
+    "            },\n",
+    "            'one_main':{\n",
+    "                'reset_trigger':0,\n",
+    "            },\n",
     "            'one_hallway':{\n",
     "                'kitchen_lamp_switch':0,\n",
     "                'outdoor_lamp_switch':0,\n",
-    "                'parlor_lamp_switch':0\n",
+    "                'parlor_lamp_switch':0,\n",
+    "                'reset_trigger':0\n",
     "            }\n",
     "        }\n",
-    "        random.seed(1209218402348023984239874891)\n",
+    "        random.seed(int(config['RANDOM_SEED']))\n",
     "        self.key = self.gethash(random.random())\n",
     "        self.key = self.gethash(self.key)\n",
     "        \n",
-    "        self.host = '0.0.0.0'\n",
-    "        self.port = 5000\n",
+    "        self.host = config['HOST_NODE_IP']\n",
+    "        self.port = int(config['HOST_NODE_PORT'])\n",
+    "        \n",
+    "        \n",
+    "    \n",
+    "class Vibrateserver(BaseHTTPRequestHandler, VibrateProcessor):\n",
+    "    def __init__(self, *args, **kwargs):\n",
+    "        super().__init__(*args, **kwargs)        \n",
     "        \n",
     "    def do_GET(self):\n",
-    "        try:\n",
-    "            qs = parse_qs(urlparse(self.path).query)\n",
-    "            print(qs)\n",
-    "            path = urlparse(self.path).path\n",
+    "        qs = parse_qs(urlparse(self.path).query)\n",
+    "        path = urlparse(self.path).path\n",
+    "        vp = VibrateProcessor()\n",
+    "        \n",
+    "        # print('zero')\n",
+    "        if 'key' in qs.keys() and 'hwid' in qs.keys():\n",
+    "            # print('a')\n",
     "            hwid = qs['hwid'][0]\n",
-    "\n",
-    "            if qs['key'][0] == self.key:\n",
-    "                print('key correct')\n",
-    "                print(self.path)\n",
+    "            if qs['key'][0] == vp.key:\n",
+    "                # print('b')\n",
     "                # Input handler\n",
-    "                if path == f'/input':\n",
-    "                    print('go to input handler')\n",
-    "                    if hwid in self.in_sw.keys():\n",
-    "                        payload_split = qs['payload'].split('z')\n",
-    "                        if len(payload_split) == len(self.in_sw[hwid]):\n",
+    "                if path == '/input':\n",
+    "                    # print('c')\n",
+    "                    if hwid in vp.in_sw.keys():\n",
+    "                        # print('d')\n",
+    "                        payload_split = qs['payload'][0].split('z')\n",
+    "                        if len(payload_split) == len(vp.in_sw[hwid]):\n",
+    "                            # print('e')\n",
+    "                            self.send_response(200)\n",
+    "                            self.send_header('Content-type', 'text/html')\n",
+    "                            self.end_headers()\n",
     "                            self.set_table(hwid)\n",
-    "                            self.insert_value(self.in_sw[hwid], payload_split)\n",
-    "                        else:\n",
-    "                            self.send_error(500, 'Access denied')\n",
-    "                    else:\n",
-    "                        self.send_error(500, 'Access denied')\n",
+    "                            self.create_connection(vp.db_path)\n",
+    "                            # print(vp.in_sw[hwid])\n",
+    "                            # print(payload_split)\n",
+    "                            # print('AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA')\n",
+    "                            # print(hwid)\n",
+    "                            self.insert_value(vp.in_sw[hwid], payload_split)\n",
     "\n",
     "                # Output handler\n",
-    "                elif path == f'/output':\n",
-    "                    print('output handler')\n",
-    "                    print(hwid)\n",
-    "                    print(self.out_sw.keys())\n",
-    "                    if hwid in self.out_sw.keys():\n",
-    "                        print('output handler corret hwid')\n",
+    "                elif path == '/output':\n",
+    "                    # print('f')\n",
+    "                    if hwid in vp.out_sw.keys():\n",
+    "                        # print('g')\n",
     "                        self.send_response(200)\n",
     "                        self.send_header('Content-type', 'text/html')\n",
     "                        self.end_headers()\n",
-    "                        self.wfile.write(bytes('0,0,1', 'utf-8'))\n",
-    "                    else:\n",
-    "                        self.send_error(500, 'Access denied')\n",
-    "            else:\n",
-    "                print('full error')\n",
-    "                self.send_error(500, 'Access denied')\n",
-    "           \n",
-    "        except:\n",
-    "            print('exception')\n",
-    "            self.send_error(500, 'Access denied')"
+    "                        \n",
+    "                        output_csv = ','.join([str(v) for v in vp.out_sw[hwid].values()])\n",
+    "                        \n",
+    "                        self.wfile.write(bytes(output_csv, 'utf-8'))        \n",
+    "                        \n",
+    "        # print('last')\n",
+    "            \n",
+    "            \n",
+    "if __name__ == '__main__':\n",
+    "    vp = VibrateProcessor()\n",
+    "    webServer = HTTPServer((vp.host,vp.port), Vibrateserver)\n",
+    "    print(f'Server started http://{vp.host}:{vp.port}')\n",
+    "    \n",
+    "    try:\n",
+    "        webServer.serve_forever()\n",
+    "    except KeyboardInterrupt:\n",
+    "        pass\n",
+    "    \n",
+    "    webServer.server_close()\n",
+    "    print('Server stopped.')"
    ]
   },
   {
@@ -173,8 +232,8 @@
     }
    ],
    "source": [
-    "vs = Vibrateserver()\n",
-    "vs.key"
+    "# vs = Vibrateserver()\n",
+    "# vs.key"
    ]
   },
   {
@@ -184,7 +243,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vs.create_connection(vs.db_path)"
+    "# vs.create_connection(vs.db_path)"
    ]
   },
   {
@@ -205,7 +264,7 @@
     }
    ],
    "source": [
-    "type(vs.conn)"
+    "# type(vs.conn)"
    ]
   },
   {
@@ -226,7 +285,7 @@
     }
    ],
    "source": [
-    "isinstance(vs.conn, sqlite3.Connection)"
+    "# isinstance(vs.conn, sqlite3.Connection)"
    ]
   },
   {
@@ -244,8 +303,8 @@
     }
    ],
    "source": [
-    "webServer = HTTPServer((vs.host, vs.port), vs)\n",
-    "print(f'Server started http://{vs.host}:{vs.port}')"
+    "# webServer = HTTPServer((vs.host, vs.port), vs)\n",
+    "# print(f'Server started http://{vs.host}:{vs.port}')"
    ]
   },
   {
@@ -266,7 +325,7 @@
     }
    ],
    "source": [
-    "vs.host"
+    "# vs.host"
    ]
   },
   {
@@ -276,10 +335,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "try:\n",
-    "    webServer.serve_forever()\n",
-    "except KeyboardInterrupt:\n",
-    "    pass"
+    "# try:\n",
+    "#     webServer.serve_forever()\n",
+    "# except KeyboardInterrupt:\n",
+    "#     pass"
    ]
   },
   {
@@ -289,7 +348,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vs.path = 'http://localhost:5000/output?key=431f8a00bb579d4691b19efe332e21d8b61ff25e8a1698d81bf95a756660f3ee&hwid=one_hallway'"
+    "# vs.path = 'http://localhost:5000/output?key=431f8a00bb579d4691b19efe332e21d8b61ff25e8a1698d81bf95a756660f3ee&hwid=one_hallway'"
    ]
   },
   {
@@ -313,7 +372,7 @@
     }
    ],
    "source": [
-    "vs.do_GET()"
+    "# vs.do_GET()"
    ]
   },
   {
@@ -334,7 +393,7 @@
     }
    ],
    "source": [
-    "urlparse(vs.path).path"
+    "# urlparse(vs.path).path"
    ]
   },
   {
@@ -352,10 +411,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from urllib.parse import urlparse, parse_qs\n",
-    "url = 'localhost:8080/input?key=431f8a00bb579d4691b19efe332e21d8b61ff25e8a1698d81bf95a756660f3ee&hwid=two_corner&payload=423z982z912'\n",
-    "qs = parse_qs(urlparse(url).query)\n",
-    "path = urlparse(url).path"
+    "# from urllib.parse import urlparse, parse_qs\n",
+    "# url = 'localhost:8080/input?key=431f8a00bb579d4691b19efe332e21d8b61ff25e8a1698d81bf95a756660f3ee&hwid=two_corner&payload=423z982z912'\n",
+    "# qs = parse_qs(urlparse(url).query)\n",
+    "# path = urlparse(url).path"
    ]
   },
   {
@@ -377,7 +436,7 @@
    ],
    "source": [
     "\n",
-    "qs['hwid'][0] in ag.in_sw.keys()"
+    "# qs['hwid'][0] in ag.in_sw.keys()"
    ]
   },
   {
@@ -398,7 +457,7 @@
     }
    ],
    "source": [
-    "ag.in_sw.keys()"
+    "# ag.in_sw.keys()"
    ]
   },
   {
@@ -421,7 +480,7 @@
     }
    ],
    "source": [
-    "'hwid' in"
+    "# 'hwid' in"
    ]
   },
   {
@@ -453,7 +512,7 @@
    "id": "4e5ba163-4f7f-4eba-9612-caf34c082c45",
    "metadata": {},
    "source": [
-    "localhost:8080/input?key=431f8a00bb579d4691b19efe332e21d8b61ff25e8a1698d81bf95a756660f3ee&hwid=two_corner&payload=423z982z912"
+    "<!-- localhost:8080/input?key=431f8a00bb579d4691b19efe332e21d8b61ff25e8a1698d81bf95a756660f3ee&hwid=two_corner&payload=423z982z912 -->"
    ]
   },
   {
@@ -474,8 +533,8 @@
     }
    ],
    "source": [
-    "f = [0,0,0]\n",
-    "len(f)"
+    "# f = [0,0,0]\n",
+    "# len(f)"
    ]
   },
   {
@@ -485,12 +544,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "http://192.168.0.5:5000/input?key=431f8a00bb579d4691b19efe332e21d8b61ff25e8a1698d81bf95a756660f3ee&hwid=two_corner&payload=423z982z912\n",
+    "# http://192.168.0.5:5000/input?key=431f8a00bb579d4691b19efe332e21d8b61ff25e8a1698d81bf95a756660f3ee&hwid=two_corner&payload=423z982z912\n",
     "\n",
-    "http://192.168.0.5:5000/input?key=431f8a00bb579d4691b19efe332e21d8b61ff25e8a1698d81bf95a756660f3ee&hwid=two_entry&payload=423z982\n",
+    "# http://192.168.0.5:5000/input?key=431f8a00bb579d4691b19efe332e21d8b61ff25e8a1698d81bf95a756660f3ee&hwid=two_entry&payload=423z982\n",
     "\n",
-    "one_perimeter\n",
-    "http://192.168.0.5:5000/input?key=431f8a00bb579d4691b19efe332e21d8b61ff25e8a1698d81bf95a756660f3ee&hwid=one_perimeter&payload=423z982z998z45z456"
+    "# one_perimeter\n",
+    "# http://192.168.0.5:5000/input?key=431f8a00bb579d4691b19efe332e21d8b61ff25e8a1698d81bf95a756660f3ee&hwid=one_perimeter&payload=423z982z998z45z456"
    ]
   },
   {
@@ -500,7 +559,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "http://192.168.0.5:5000/output?key=431f8a00bb579d4691b19efe332e21d8b61ff25e8a1698d81bf95a756660f3ee&hwid=one_hallway"
+    "# http://192.168.0.5:5000/output?key=431f8a00bb579d4691b19efe332e21d8b61ff25e8a1698d81bf95a756660f3ee&hwid=one_hallway"
    ]
   },
   {
@@ -518,8 +577,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = ['front_facing', 'side_facing', 'room_entry']\n",
-    "b = ['423', '982', '912']"
+    "# a = ['front_facing', 'side_facing', 'room_entry']\n",
+    "# b = ['423', '982', '912']"
    ]
   },
   {
@@ -540,7 +599,7 @@
     }
    ],
    "source": [
-    "all(isinstance(i, list) for i in [a, b])"
+    "# all(isinstance(i, list) for i in [a, b])"
    ]
   },
   {
@@ -561,10 +620,10 @@
     }
    ],
    "source": [
-    "a = ['a', 'b', 'c', 'd']\n",
-    "b = ['float', 'int', 'int', 'int']\n",
-    "for x, y in zip(a, b):\n",
-    "    print(x, y)"
+    "# a = ['a', 'b', 'c', 'd']\n",
+    "# b = ['float', 'int', 'int', 'int']\n",
+    "# for x, y in zip(a, b):\n",
+    "#     print(x, y)"
    ]
   },
   {
@@ -582,26 +641,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = {\n",
-    "            'two_corner':{\n",
-    "                'reset_trigger':0,\n",
-    "            },\n",
-    "            'two_entry':{\n",
-    "                'reset_trigger':0,\n",
-    "            },\n",
-    "            'one_perimeter':{\n",
-    "                'reset_trigger':0,\n",
-    "            },\n",
-    "            'one_main':{\n",
-    "                'reset_trigger':0,\n",
-    "            },\n",
-    "            'one_hallway':{\n",
-    "                'kitchen_lamp_switch':0,\n",
-    "                'outdoor_lamp_switch':0,\n",
-    "                'parlor_lamp_switch':0,\n",
-    "                'reset_trigger':0\n",
-    "            }\n",
-    "        }"
+    "# a = {\n",
+    "#             'two_corner':{\n",
+    "#                 'reset_trigger':0,\n",
+    "#             },\n",
+    "#             'two_entry':{\n",
+    "#                 'reset_trigger':0,\n",
+    "#             },\n",
+    "#             'one_perimeter':{\n",
+    "#                 'reset_trigger':0,\n",
+    "#             },\n",
+    "#             'one_main':{\n",
+    "#                 'reset_trigger':0,\n",
+    "#             },\n",
+    "#             'one_hallway':{\n",
+    "#                 'kitchen_lamp_switch':0,\n",
+    "#                 'outdoor_lamp_switch':0,\n",
+    "#                 'parlor_lamp_switch':0,\n",
+    "#                 'reset_trigger':0\n",
+    "#             }\n",
+    "#         }"
    ]
   },
   {
@@ -622,7 +681,7 @@
     }
    ],
    "source": [
-    "','.join([str(v) for v in a['one_hallway'].values()])"
+    "# ','.join([str(v) for v in a['one_hallway'].values()])"
    ]
   },
   {
@@ -644,7 +703,7 @@
     }
    ],
    "source": [
-    "','.join(a['one_hallway'].values())"
+    "# ','.join(a['one_hallway'].values())"
    ]
   },
   {
