--- a/old_capture_server/main.ipynb
+++ b/old_capture_server/main.ipynb
@@ -17,7 +17,9 @@
    "source": [
     "import os\n",
     "os.add_dll_directory(r'C:\\Program Files\\VideoLAN\\VLC')\n",
-    "import vlc"
+    "import vlc\n",
+    "from dotenv import dotenv_values\n",
+    "config = dotenv_values('../.env')"
    ]
   },
   {
@@ -27,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "player = vlc.MediaPlayer('rtsp://admin:Valerian%40live1@192.168.0.170:554/Streaming/Channels/101/')"
+    "player = vlc.MediaPlayer(f\"rtsp://{config['CCTV_GLOBAL_USERNAME_URLENCODED']}:{config['CCTV_GLOBAL_PASSWORD_URLENCODED']}@{config['CCTV_1_IP']}:554/Streaming/Channels/101/\")"
    ]
   },
   {
@@ -134,7 +136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
