--- a/webcapture.ipynb
+++ b/webcapture.ipynb
@@ -72,7 +72,7 @@
     "                        # Login page\n",
     "                        wait.until(EC.element_to_be_clickable((By.XPATH, '/html/body/div[2]/table/tbody/tr/td[2]/div/div[5]/button')))\n",
     "                        driver.find_element('id', 'username').send_keys(go.config['CCTV_GLOBAL_USERNAME_URLENCODED'])\n",
-    "                        driver.find_element('id', 'password').send_keys(go.config['CCTV_GLOBAL_PASSWORD_URLENCODED'])\n",
+    "                        driver.find_element('id', 'password').send_keys(go.config['CCTV_GLOBAL_PASSWORD'])\n",
     "                        driver.find_element('xpath', '/html/body/div[2]/table/tbody/tr/td[2]/div/div[5]/button').click()    \n",
     "                        print(f'{go.datetime_now()} Login success at {urlhost}')\n",
     "\n",
