fix database initialization error

--- a/movement_signal.ipynb
+++ b/movement_signal.ipynb
@@ -68,6 +68,7 @@
     "\n",
     "    # Readings db\n",
     "    db_path = os.path.join(root_path, 'db')\n",
+    "    os.makedirs(db_path, exist_ok=True)\n",
     "    readings_db = os.path.join(db_path, go.config['MOVEMENT_SIGNAL_DB'])\n",
     "    sqlite = Sqlite_v2()\n",
     "    sqlite.set_table(label)\n",
