add Google Drive cleanup script

--- a/cleanup.ipynb
+++ b/cleanup.ipynb
@@ -26,7 +26,7 @@
     "        while True:\n",
     "            cleanup_counter = 0\n",
     "            beginning_storage = go.free_storage(root_path)\n",
-    "            date_threshold = (datetime.now() - timedelta(hours=24)).timestamp()\n",
+    "            date_threshold = (datetime.now() - timedelta(hours=keep_records_for * 24)).timestamp()\n",
     "            captured_frames_labels = os.listdir(captured_frames_path)\n",
     "            for label in captured_frames_labels:\n",
     "                captured_frames_label_path = os.path.join(captured_frames_path, label)\n",
