--- a/cleanup_gdrive.ipynb
+++ b/cleanup_gdrive.ipynb
@@ -46,6 +46,7 @@
     "\n",
     "                    try:\n",
     "                        shutil.copy(source_file_path, target_file_path)\n",
+    "                        os.remove(source_file_path)\n",
     "                        print(f'{go.datetime_now()} Copying: {target_file_path}')\n",
     "                    except FileNotFoundError:\n",
     "                        print(f'{go.datetime_now()} Failed file not found: {target_file_path}')\n",
