improving capture_restructurer stability

--- a/capture_restructurer.ipynb
+++ b/capture_restructurer.ipynb
@@ -58,7 +58,17 @@
     "            target_path = os.path.join(target_folder, f'{timestamp}.jpg')\n",
     "\n",
     "            # Move file to /cache/captured_frames, outer_fence/hallway/garden\n",
-    "            shutil.move(origin_path, target_path)\n",
+    "            try:\n",
+    "                shutil.move(origin_path, target_path)\n",
+    "            except PermissionError, FileExistsError:\n",
+    "                # PermissionError / FileExistsError\n",
+    "                # Abort moving to new location and straight remove\n",
+    "                print(f'Fail to move: {origin_path}')\n",
+    "                try:\n",
+    "                    os.remove(origin_path)\n",
+    "                except FileNotFoundError:\n",
+    "                    print(f'Fail to move and remove: {origin_path}')\n",
+    "                    pass\n",
     "            \n",
     "if __name__ == '__main__':\n",
     "    try:\n",
