--- a/capture_restructurer.ipynb
+++ b/capture_restructurer.ipynb
@@ -60,7 +60,7 @@
     "            # Move file to /cache/captured_frames, outer_fence/hallway/garden\n",
     "            try:\n",
     "                shutil.move(origin_path, target_path)\n",
-    "            except PermissionError, FileExistsError:\n",
+    "            except (PermissionError, FileExistsError):\n",
     "                # PermissionError / FileExistsError\n",
     "                # Abort moving to new location and straight remove\n",
     "                print(f'Fail to move: {origin_path}')\n",
