--- a/cleanup_gdrive.ipynb
+++ b/cleanup_gdrive.ipynb
@@ -50,6 +50,9 @@
     "                        print(f'{go.datetime_now()} Copying: {target_file_path}')\n",
     "                    except FileNotFoundError:\n",
     "                        print(f'{go.datetime_now()} Failed file not found: {target_file_path}')\n",
+    "                    except OSError:\n",
+    "                        print(f'{go.datetime_now()} Copy or remove file has failed. Leaving the condition as it is: {target_file_path}')\n",
+    "                        \n",
     "\n",
     "                cleanup_counter += 1\n",
     "            print(f'{go.datetime_now()} Google Drive cleanup finished. {cleanup_counter} records cleaned.')\n",
