--- a/webcapture.ipynb
+++ b/webcapture.ipynb
@@ -26,9 +26,10 @@
     "go = GlobalOperations()\n",
     "\n",
     "capture_interval = 0.7 #second(s)\n",
-    "live_for = 240 #second(s), server lived for\n",
+    "live_for = 20 #second(s), server lived for\n",
     "capture_per_session = int(live_for / capture_interval)\n",
     "wait_timeout = 20 #second(s)\n",
+    "browser_ttl = 3 # browser time to live. Quit and restart browser after n number of sessions.\n",
     "\n",
     "root_path = os.getcwd()\n",
     "browser_bin_path = r'C:\\Program Files\\Mozilla Firefox\\firefox.exe'\n",
@@ -60,38 +61,40 @@
     "    try:\n",
     "        print(f'{go.datetime_now()} Start new instance')\n",
     "        with webdriver.Firefox(service=service, options=options) as driver:\n",
-    "\n",
     "            wait = WebDriverWait(driver, wait_timeout)\n",
+    "\n",
     "            while True:\n",
     "                try:\n",
-    "                    print(f'{go.datetime_now()} Connecting to: http://{urlhost}/')\n",
-    "                    driver.get(f\"http://{urlhost}/\")\n",
-    "\n",
-    "                    # Relogin every start of capture session\n",
     "                    while True:\n",
-    "                        # Login page\n",
-    "                        wait.until(EC.element_to_be_clickable((By.XPATH, '/html/body/div[2]/table/tbody/tr/td[2]/div/div[5]/button')))\n",
-    "                        driver.find_element('id', 'username').send_keys(go.config['CCTV_GLOBAL_USERNAME_URLENCODED'])\n",
-    "                        driver.find_element('id', 'password').send_keys(go.config['CCTV_GLOBAL_PASSWORD'])\n",
-    "                        driver.find_element('xpath', '/html/body/div[2]/table/tbody/tr/td[2]/div/div[5]/button').click()    \n",
-    "                        print(f'{go.datetime_now()} Login success at {urlhost}')\n",
-    "\n",
-    "                        # Capture button\n",
-    "                        print(f'{go.datetime_now()} Capturing frames at {urlhost}...')\n",
-    "                        wait.until(EC.element_to_be_clickable((By.XPATH, '/html/body/div[4]/div[2]/div/div[2]/span/button[3]')))\n",
-    "                        for _ in trange(capture_per_session):\n",
+    "                        print(f'{go.datetime_now()} Connecting to: http://{urlhost}/')\n",
+    "                        driver.get(f\"http://{urlhost}/\")\n",
+    "                        for _ in browser_ttl:\n",
+    "                            # Relogin in every start of the capture session                       \n",
+    "                            # Login page\n",
+    "                            wait.until(EC.element_to_be_clickable((By.XPATH, '/html/body/div[2]/table/tbody/tr/td[2]/div/div[5]/button')))\n",
+    "                            driver.find_element('id', 'username').send_keys(go.config['CCTV_GLOBAL_USERNAME_URLENCODED'])\n",
+    "                            driver.find_element('id', 'password').send_keys(go.config['CCTV_GLOBAL_PASSWORD'])\n",
+    "                            driver.find_element('xpath', '/html/body/div[2]/table/tbody/tr/td[2]/div/div[5]/button').click()    \n",
+    "                            print(f'{go.datetime_now()} Login success at {urlhost}')\n",
+    "    \n",
+    "                            # Capture button\n",
+    "                            print(f'{go.datetime_now()} Capturing frames at {urlhost}...')\n",
     "                            wait.until(EC.element_to_be_clickable((By.XPATH, '/html/body/div[4]/div[2]/div/div[2]/span/button[3]')))\n",
-    "                            driver.find_element('xpath', '/html/body/div[4]/div[2]/div/div[2]/span/button[3]').click()\n",
-    "                            time.sleep(capture_interval)\n",
-    "\n",
-    "                        # Logout session\n",
-    "                        # Logout button on main frame\n",
-    "                        wait.until(EC.element_to_be_clickable((By.XPATH, '/html/body/div[2]/div/div[2]/div[5]')))\n",
-    "                        driver.find_element('xpath', '/html/body/div[2]/div/div[2]/div[5]').click()\n",
-    "                        # Popup confirmation\n",
-    "                        wait.until(EC.element_to_be_clickable((By.XPATH, '/html/body/div[1]/div/table/tbody/tr[2]/td[2]/div/table/tbody/tr[3]/td/div/button[1]')))\n",
-    "                        driver.find_element('xpath', '/html/body/div[1]/div/table/tbody/tr[2]/td[2]/div/table/tbody/tr[3]/td/div/button[1]').click()\n",
-    "                        print(f'{go.datetime_now()} End of capture session. Reloggin...')\n",
+    "                            for _ in trange(capture_per_session):\n",
+    "                                wait.until(EC.element_to_be_clickable((By.XPATH, '/html/body/div[4]/div[2]/div/div[2]/span/button[3]')))\n",
+    "                                driver.find_element('xpath', '/html/body/div[4]/div[2]/div/div[2]/span/button[3]').click()\n",
+    "                                time.sleep(capture_interval)\n",
+    "    \n",
+    "                            # Logout session\n",
+    "                            # Logout button on main frame\n",
+    "                            wait.until(EC.element_to_be_clickable((By.XPATH, '/html/body/div[2]/div/div[2]/div[5]')))\n",
+    "                            driver.find_element('xpath', '/html/body/div[2]/div/div[2]/div[5]').click()\n",
+    "                            # Popup confirmation\n",
+    "                            wait.until(EC.element_to_be_clickable((By.XPATH, '/html/body/div[1]/div/table/tbody/tr[2]/td[2]/div/table/tbody/tr[3]/td/div/button[1]')))\n",
+    "                            driver.find_element('xpath', '/html/body/div[1]/div/table/tbody/tr[2]/td[2]/div/table/tbody/tr[3]/td/div/button[1]').click()\n",
+    "                            print(f'{go.datetime_now()} End of capture session. Reloggin...')\n",
+    "                        # Closing & relaunching driver every `browser_ttl` times\n",
+    "                        driver.close()\n",
     "                except TimeoutException:\n",
     "                    print(f'{go.datetime_now()} webcapture.py -u \"{urlhost}\" Request timeout. Wait for {wait_timeout}s.')\n",
     "                    time.sleep(wait_timeout)\n",
