fix typo and add debug info

--- a/webcapture.ipynb
+++ b/webcapture.ipynb
@@ -66,9 +66,11 @@
     "            while True:\n",
     "                try:\n",
     "                    while True:\n",
+    "                        print(f'{go.datetime_now()} Opening new browser window. Browser time to live: {browser_ttl}')\n",
     "                        print(f'{go.datetime_now()} Connecting to: http://{urlhost}/')\n",
     "                        driver.get(f\"http://{urlhost}/\")\n",
-    "                        for _ in browser_ttl:\n",
+    "                        for b in trange(browser_ttl):\n",
+    "                            print(f'{go.datetime_now()} {b+1}/{browser_ttl} browser cycle.')\n",
     "                            # Relogin in every start of the capture session                       \n",
     "                            # Login page\n",
     "                            wait.until(EC.element_to_be_clickable((By.XPATH, '/html/body/div[2]/table/tbody/tr/td[2]/div/div[5]/button')))\n",
@@ -94,6 +96,7 @@
     "                            driver.find_element('xpath', '/html/body/div[1]/div/table/tbody/tr[2]/td[2]/div/table/tbody/tr[3]/td/div/button[1]').click()\n",
     "                            print(f'{go.datetime_now()} End of capture session. Reloggin...')\n",
     "                        # Closing & relaunching driver every `browser_ttl` times\n",
+    "                        print(f'{go.datetime_now()} End of browser time to live. Closing browser window and launch again.')\n",
     "                        driver.close()\n",
     "                except TimeoutException:\n",
     "                    print(f'{go.datetime_now()} webcapture.py -u \"{urlhost}\" Request timeout. Wait for {wait_timeout}s.')\n",
