reorder indentation to fix browser restart bug

--- a/webcapture.ipynb
+++ b/webcapture.ipynb
@@ -26,10 +26,10 @@
     "go = GlobalOperations()\n",
     "\n",
     "capture_interval = 0.7 #second(s)\n",
-    "live_for = 20 #second(s), server lived for\n",
+    "live_for = 15 #second(s), server lived for\n",
     "capture_per_session = int(live_for / capture_interval)\n",
     "wait_timeout = 20 #second(s)\n",
-    "browser_ttl = 3 # browser time to live. Quit and restart browser after n number of sessions.\n",
+    "browser_ttl = 2 # browser time to live. Quit and restart browser after n number of sessions.\n",
     "\n",
     "root_path = os.getcwd()\n",
     "browser_bin_path = r'C:\\Program Files\\Mozilla Firefox\\firefox.exe'\n",
@@ -60,16 +60,16 @@
     "    \n",
     "    try:\n",
     "        print(f'{go.datetime_now()} Start new instance')\n",
-    "        with webdriver.Firefox(service=service, options=options) as driver:\n",
-    "            wait = WebDriverWait(driver, wait_timeout)\n",
-    "\n",
-    "            while True:\n",
-    "                try:\n",
-    "                    while True:\n",
+    "        while True:\n",
+    "            try:\n",
+    "                while True:\n",
+    "                    with webdriver.Firefox(service=service, options=options) as driver:\n",
+    "                        wait = WebDriverWait(driver, wait_timeout)\n",
+    "                        \n",
     "                        print(f'{go.datetime_now()} Opening new browser window. Browser time to live: {browser_ttl}')\n",
     "                        print(f'{go.datetime_now()} Connecting to: http://{urlhost}/')\n",
     "                        driver.get(f\"http://{urlhost}/\")\n",
-    "                        for b in trange(browser_ttl):\n",
+    "                        for b in range(browser_ttl):\n",
     "                            print(f'{go.datetime_now()} {b+1}/{browser_ttl} browser cycle.')\n",
     "                            # Relogin in every start of the capture session                       \n",
     "                            # Login page\n",
@@ -98,19 +98,19 @@
     "                        # Closing & relaunching driver every `browser_ttl` times\n",
     "                        print(f'{go.datetime_now()} End of browser time to live. Closing browser window and launch again.')\n",
     "                        driver.close()\n",
-    "                except TimeoutException:\n",
-    "                    print(f'{go.datetime_now()} webcapture.py -u \"{urlhost}\" Request timeout. Wait for {wait_timeout}s.')\n",
-    "                    time.sleep(wait_timeout)\n",
-    "                except (ElementClickInterceptedException, WebDriverException):\n",
-    "                    # WebDriverException:\n",
-    "                    # Connection to the server was reset while the page was loading\n",
-    "                    #\n",
-    "                    # ElementClickInterceptedException:\n",
-    "                    # Element <div class=\"exit\"> is not clickable at point (642,153) \n",
-    "                    #   because another element <div id=\"plugin\" \n",
-    "                    #   class=\"layout-center-inner ui-layout-pane ui-layout-pane-center ng-scope\"> \n",
-    "                    #   obscures it\n",
-    "                    print(f'{go.datetime_now()} webcapture.py -u \"{urlhost}\" ElementClickInterceptedException or WebDriverException. Wait for {wait_timeout}s and retrying from login page.')\n",
+    "            except TimeoutException:\n",
+    "                print(f'{go.datetime_now()} webcapture.py -u \"{urlhost}\" Request timeout. Wait for {wait_timeout}s.')\n",
+    "                time.sleep(wait_timeout)\n",
+    "            except (ElementClickInterceptedException, WebDriverException):\n",
+    "                # WebDriverException:\n",
+    "                # Connection to the server was reset while the page was loading\n",
+    "                #\n",
+    "                # ElementClickInterceptedException:\n",
+    "                # Element <div class=\"exit\"> is not clickable at point (642,153) \n",
+    "                #   because another element <div id=\"plugin\" \n",
+    "                #   class=\"layout-center-inner ui-layout-pane ui-layout-pane-center ng-scope\"> \n",
+    "                #   obscures it\n",
+    "                print(f'{go.datetime_now()} webcapture.py -u \"{urlhost}\" ElementClickInterceptedException or WebDriverException. Wait for {wait_timeout}s and retrying from login page.')\n",
     "\n",
     "    except KeyboardInterrupt:\n",
     "        print(f'{go.datetime_now()} Stopping Hikvision capture server at {urlhost}')\n",
