--- a/webcapture.ipynb
+++ b/webcapture.ipynb
@@ -63,40 +63,42 @@
     "        while True:\n",
     "            try:\n",
     "                while True:\n",
-    "                    with webdriver.Firefox(service=service, options=options) as driver:\n",
-    "                        wait = WebDriverWait(driver, wait_timeout)\n",
-    "                        \n",
-    "                        print(f'{go.datetime_now()} Opening new browser window. Browser time to live: {browser_ttl}')\n",
-    "                        print(f'{go.datetime_now()} Connecting to: http://{urlhost}/')\n",
-    "                        driver.get(f\"http://{urlhost}/\")\n",
-    "                        for b in range(browser_ttl):\n",
-    "                            print(f'{go.datetime_now()} {b+1}/{browser_ttl} browser cycle.')\n",
-    "                            # Relogin in every start of the capture session                       \n",
-    "                            # Login page\n",
-    "                            wait.until(EC.element_to_be_clickable((By.XPATH, '/html/body/div[2]/table/tbody/tr/td[2]/div/div[5]/button')))\n",
-    "                            driver.find_element('id', 'username').send_keys(go.config['CCTV_GLOBAL_USERNAME_URLENCODED'])\n",
-    "                            driver.find_element('id', 'password').send_keys(go.config['CCTV_GLOBAL_PASSWORD'])\n",
-    "                            driver.find_element('xpath', '/html/body/div[2]/table/tbody/tr/td[2]/div/div[5]/button').click()    \n",
-    "                            print(f'{go.datetime_now()} Login success at {urlhost}')\n",
-    "    \n",
-    "                            # Capture button\n",
-    "                            print(f'{go.datetime_now()} Capturing frames at {urlhost}...')\n",
+    "                    driver = webdriver.Firefox(service=service, options=options)\n",
+    "                    # with webdriver.Firefox(service=service, options=options) as driver:\n",
+    "                    wait = WebDriverWait(driver, wait_timeout)\n",
+    "                    \n",
+    "                    print(f'{go.datetime_now()} Opening new browser window. Browser time to live: {browser_ttl}')\n",
+    "                    print(f'{go.datetime_now()} Connecting to: http://{urlhost}/')\n",
+    "                    driver.get(f\"http://{urlhost}/\")\n",
+    "                    for b in range(browser_ttl):\n",
+    "                        print(f'{go.datetime_now()} {b+1}/{browser_ttl} browser cycle.')\n",
+    "                        # Relogin in every start of the capture session                       \n",
+    "                        # Login page\n",
+    "                        wait.until(EC.element_to_be_clickable((By.XPATH, '/html/body/div[2]/table/tbody/tr/td[2]/div/div[5]/button')))\n",
+    "                        driver.find_element('id', 'username').send_keys(go.config['CCTV_GLOBAL_USERNAME_URLENCODED'])\n",
+    "                        driver.find_element('id', 'password').send_keys(go.config['CCTV_GLOBAL_PASSWORD'])\n",
+    "                        driver.find_element('xpath', '/html/body/div[2]/table/tbody/tr/td[2]/div/div[5]/button').click()    \n",
+    "                        print(f'{go.datetime_now()} Login success at {urlhost}')\n",
+    "\n",
+    "                        # Capture button\n",
+    "                        print(f'{go.datetime_now()} Capturing frames at {urlhost}...')\n",
+    "                        wait.until(EC.element_to_be_clickable((By.XPATH, '/html/body/div[4]/div[2]/div/div[2]/span/button[3]')))\n",
+    "                        for _ in trange(capture_per_session):\n",
     "                            wait.until(EC.element_to_be_clickable((By.XPATH, '/html/body/div[4]/div[2]/div/div[2]/span/button[3]')))\n",
-    "                            for _ in trange(capture_per_session):\n",
-    "                                wait.until(EC.element_to_be_clickable((By.XPATH, '/html/body/div[4]/div[2]/div/div[2]/span/button[3]')))\n",
-    "                                driver.find_element('xpath', '/html/body/div[4]/div[2]/div/div[2]/span/button[3]').click()\n",
-    "                                time.sleep(capture_interval)\n",
-    "    \n",
-    "                            # Logout session\n",
-    "                            # Logout button on main frame\n",
-    "                            wait.until(EC.element_to_be_clickable((By.XPATH, '/html/body/div[2]/div/div[2]/div[5]')))\n",
-    "                            driver.find_element('xpath', '/html/body/div[2]/div/div[2]/div[5]').click()\n",
-    "                            # Popup confirmation\n",
-    "                            wait.until(EC.element_to_be_clickable((By.XPATH, '/html/body/div[1]/div/table/tbody/tr[2]/td[2]/div/table/tbody/tr[3]/td/div/button[1]')))\n",
-    "                            driver.find_element('xpath', '/html/body/div[1]/div/table/tbody/tr[2]/td[2]/div/table/tbody/tr[3]/td/div/button[1]').click()\n",
-    "                            print(f'{go.datetime_now()} End of capture session. Reloggin...')\n",
-    "                        # Closing & relaunching driver every `browser_ttl` times\n",
-    "                        print(f'{go.datetime_now()} End of browser time to live. Closing browser window and launch again.')\n",
+    "                            driver.find_element('xpath', '/html/body/div[4]/div[2]/div/div[2]/span/button[3]').click()\n",
+    "                            time.sleep(capture_interval)\n",
+    "\n",
+    "                        # Logout session\n",
+    "                        # Logout button on main frame\n",
+    "                        wait.until(EC.element_to_be_clickable((By.XPATH, '/html/body/div[2]/div/div[2]/div[5]')))\n",
+    "                        driver.find_element('xpath', '/html/body/div[2]/div/div[2]/div[5]').click()\n",
+    "                        # Popup confirmation\n",
+    "                        wait.until(EC.element_to_be_clickable((By.XPATH, '/html/body/div[1]/div/table/tbody/tr[2]/td[2]/div/table/tbody/tr[3]/td/div/button[1]')))\n",
+    "                        driver.find_element('xpath', '/html/body/div[1]/div/table/tbody/tr[2]/td[2]/div/table/tbody/tr[3]/td/div/button[1]').click()\n",
+    "                        print(f'{go.datetime_now()} End of capture session. Reloggin...')\n",
+    "                    # Closing & relaunching driver every `browser_ttl` times\n",
+    "                    print(f'{go.datetime_now()} End of browser time to live. Closing browser window and launch again.')\n",
+    "                    \n",
     "                    driver.close()\n",
     "            except TimeoutException:\n",
     "                print(f'{go.datetime_now()} webcapture.py -u \"{urlhost}\" Request timeout. Wait for {wait_timeout}s.')\n",
