--- a/webcapture.ipynb
+++ b/webcapture.ipynb
@@ -70,31 +70,38 @@
     "                    print(f'{go.datetime_now()} Connecting to: http://{urlhost}/')\n",
     "                    driver.get(f\"http://{urlhost}/\")\n",
     "                    for b in range(browser_ttl):\n",
-    "                        print(f'{go.datetime_now()} {b+1}/{browser_ttl} browser cycle.')\n",
-    "                        # Relogin in every start of the capture session                       \n",
-    "                        # Login page\n",
-    "                        wait.until(EC.element_to_be_clickable((By.XPATH, '/html/body/div[2]/table/tbody/tr/td[2]/div/div[5]/button')))\n",
-    "                        driver.find_element('id', 'username').send_keys(go.config['CCTV_GLOBAL_USERNAME_URLENCODED'])\n",
-    "                        driver.find_element('id', 'password').send_keys(go.config['CCTV_GLOBAL_PASSWORD'])\n",
-    "                        driver.find_element('xpath', '/html/body/div[2]/table/tbody/tr/td[2]/div/div[5]/button').click()    \n",
-    "                        print(f'{go.datetime_now()} Login success at {urlhost}')\n",
-    "\n",
-    "                        # Capture button\n",
-    "                        print(f'{go.datetime_now()} Capturing frames at {urlhost}...')\n",
-    "                        wait.until(EC.element_to_be_clickable((By.XPATH, '/html/body/div[4]/div[2]/div/div[2]/span/button[3]')))\n",
-    "                        for _ in trange(capture_per_session):\n",
+    "                        try:\n",
+    "                            print(f'{go.datetime_now()} {b+1}/{browser_ttl} browser cycle.')\n",
+    "                            # Relogin in every start of the capture session                       \n",
+    "                            # Login page\n",
+    "                            wait.until(EC.element_to_be_clickable((By.XPATH, '/html/body/div[2]/table/tbody/tr/td[2]/div/div[5]/button')))\n",
+    "                            driver.find_element('id', 'username').send_keys(go.config['CCTV_GLOBAL_USERNAME_URLENCODED'])\n",
+    "                            driver.find_element('id', 'password').send_keys(go.config['CCTV_GLOBAL_PASSWORD'])\n",
+    "                            driver.find_element('xpath', '/html/body/div[2]/table/tbody/tr/td[2]/div/div[5]/button').click()    \n",
+    "                            print(f'{go.datetime_now()} Login success at {urlhost}')\n",
+    "    \n",
+    "                            # Capture button\n",
+    "                            print(f'{go.datetime_now()} Capturing frames at {urlhost}...')\n",
     "                            wait.until(EC.element_to_be_clickable((By.XPATH, '/html/body/div[4]/div[2]/div/div[2]/span/button[3]')))\n",
-    "                            driver.find_element('xpath', '/html/body/div[4]/div[2]/div/div[2]/span/button[3]').click()\n",
-    "                            time.sleep(capture_interval)\n",
+    "                            for _ in trange(capture_per_session):\n",
+    "                                wait.until(EC.element_to_be_clickable((By.XPATH, '/html/body/div[4]/div[2]/div/div[2]/span/button[3]')))\n",
+    "                                driver.find_element('xpath', '/html/body/div[4]/div[2]/div/div[2]/span/button[3]').click()\n",
+    "                                time.sleep(capture_interval)\n",
+    "    \n",
+    "                            # Logout session\n",
+    "                            # Logout button on main frame\n",
+    "                            wait.until(EC.element_to_be_clickable((By.XPATH, '/html/body/div[2]/div/div[2]/div[5]')))\n",
+    "                            driver.find_element('xpath', '/html/body/div[2]/div/div[2]/div[5]').click()\n",
+    "                            # Popup confirmation\n",
+    "                            wait.until(EC.element_to_be_clickable((By.XPATH, '/html/body/div[1]/div/table/tbody/tr[2]/td[2]/div/table/tbody/tr[3]/td/div/button[1]')))\n",
+    "                            driver.find_element('xpath', '/html/body/div[1]/div/table/tbody/tr[2]/td[2]/div/table/tbody/tr[3]/td/div/button[1]').click()\n",
+    "                            print(f'{go.datetime_now()} End of capture session. Reloggin...')\n",
+    "                        except TimeoutException:\n",
+    "                            print(f'{go.datetime_now()} webcapture.py -u \"{urlhost}\" Capture request timeout. Wait for {wait_timeout}s.')\n",
+    "                            time.sleep(wait_timeout)\n",
+    "                        except (ElementClickInterceptedException, WebDriverException):\n",
+    "                            print(f'{go.datetime_now()} webcapture.py -u \"{urlhost}\" Capture failed. ElementClickInterceptedException or WebDriverException. Wait for {wait_timeout}s and retrying from login page.')\n",
     "\n",
-    "                        # Logout session\n",
-    "                        # Logout button on main frame\n",
-    "                        wait.until(EC.element_to_be_clickable((By.XPATH, '/html/body/div[2]/div/div[2]/div[5]')))\n",
-    "                        driver.find_element('xpath', '/html/body/div[2]/div/div[2]/div[5]').click()\n",
-    "                        # Popup confirmation\n",
-    "                        wait.until(EC.element_to_be_clickable((By.XPATH, '/html/body/div[1]/div/table/tbody/tr[2]/td[2]/div/table/tbody/tr[3]/td/div/button[1]')))\n",
-    "                        driver.find_element('xpath', '/html/body/div[1]/div/table/tbody/tr[2]/td[2]/div/table/tbody/tr[3]/td/div/button[1]').click()\n",
-    "                        print(f'{go.datetime_now()} End of capture session. Reloggin...')\n",
     "                    \n",
     "                    # Closing & relaunching driver every `browser_ttl` times\n",
     "                    print(f'{go.datetime_now()} End of browser time to live. Closing browser window and launch again.')\n",
@@ -102,6 +109,10 @@
     "            except TimeoutException:\n",
     "                print(f'{go.datetime_now()} webcapture.py -u \"{urlhost}\" Request timeout. Wait for {wait_timeout}s.')\n",
     "                time.sleep(wait_timeout)\n",
+    "                try:\n",
+    "                    driver.close()\n",
+    "                except:\n",
+    "                    print('Attempt to close the driver has failed.')\n",
     "            except (ElementClickInterceptedException, WebDriverException):\n",
     "                # WebDriverException:\n",
     "                # Connection to the server was reset while the page was loading\n",
@@ -112,6 +123,10 @@
     "                #   class=\"layout-center-inner ui-layout-pane ui-layout-pane-center ng-scope\"> \n",
     "                #   obscures it\n",
     "                print(f'{go.datetime_now()} webcapture.py -u \"{urlhost}\" ElementClickInterceptedException or WebDriverException. Wait for {wait_timeout}s and retrying from login page.')\n",
+    "                try:\n",
+    "                    driver.close()\n",
+    "                except:\n",
+    "                    print('Attempt to close the driver has failed.')\n",
     "\n",
     "    except KeyboardInterrupt:\n",
     "        print(f'{go.datetime_now()} Stopping Hikvision capture server at {urlhost}')\n",
@@ -129,9 +144,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:selenium]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-selenium-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -143,7 +158,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
