clean instance in the start of the cycle. Fix browser not responding

--- a/webcapture.ipynb
+++ b/webcapture.ipynb
@@ -36,10 +36,6 @@
     "bin_path = os.path.join(root_path, 'bin')\n",
     "driver_bin_path = os.path.join(bin_path, 'geckodriver.exe')\n",
     "\n",
-    "options = Options()\n",
-    "options.binary_location = browser_bin_path\n",
-    "service = Service(executable_path=driver_bin_path, log_path=os.devnull)\n",
-    "\n",
     "def main(argv):\n",
     "    opts, args = getopt.getopt(argv, \"hu:\")\n",
     "    for opt, arg in opts:\n",
@@ -51,8 +47,7 @@
     "        else:\n",
     "            print(f'{go.datetime_now()} Please specify urlhost parameter first')\n",
     "            sys.exit()\n",
-    "            \n",
-    "\n",
+    "        \n",
     "# Serve forever\n",
     "if __name__ == \"__main__\":\n",
     "    urlhost = main(sys.argv[1:])\n",
@@ -63,6 +58,12 @@
     "        while True:\n",
     "            try:\n",
     "                while True:\n",
+    "                    # Make sure to clean previous instance\n",
+    "                    go.delete(options, service, driver, wait)\n",
+    "\n",
+    "                    options = Options()\n",
+    "                    options.binary_location = browser_bin_path\n",
+    "                    service = Service(executable_path=driver_bin_path, log_path=os.devnull)\n",
     "                    driver = webdriver.Firefox(service=service, options=options)\n",
     "                    wait = WebDriverWait(driver, wait_timeout)\n",
     "                    \n",
@@ -106,28 +107,11 @@
     "                    \n",
     "                    # Closing & relaunching driver every `browser_ttl` times\n",
     "                    print(f'{go.datetime_now()} End of browser time to live. Closing browser window and launch again.')\n",
-    "                    driver.close()\n",
     "            except TimeoutException:\n",
     "                print(f'{go.datetime_now()} webcapture.py -u \"{urlhost}\" Request timeout. Wait for {wait_timeout}s.')\n",
     "                time.sleep(wait_timeout)\n",
-    "                try:\n",
-    "                    driver.close()\n",
-    "                except:\n",
-    "                    print('Attempt to close the driver has failed.')\n",
     "            except (ElementClickInterceptedException, WebDriverException):\n",
-    "                # WebDriverException:\n",
-    "                # Connection to the server was reset while the page was loading\n",
-    "                #\n",
-    "                # ElementClickInterceptedException:\n",
-    "                # Element <div class=\"exit\"> is not clickable at point (642,153) \n",
-    "                #   because another element <div id=\"plugin\" \n",
-    "                #   class=\"layout-center-inner ui-layout-pane ui-layout-pane-center ng-scope\"> \n",
-    "                #   obscures it\n",
     "                print(f'{go.datetime_now()} webcapture.py -u \"{urlhost}\" ElementClickInterceptedException or WebDriverException. Wait for {wait_timeout}s and retrying from login page.')\n",
-    "                try:\n",
-    "                    driver.close()\n",
-    "                except:\n",
-    "                    print('Attempt to close the driver has failed.')\n",
     "\n",
     "    except KeyboardInterrupt:\n",
     "        print(f'{go.datetime_now()} Stopping Hikvision capture server at {urlhost}')\n",
