--- a/webcapture.ipynb
+++ b/webcapture.ipynb
@@ -31,6 +31,8 @@
     "wait_timeout = 20 #second(s)\n",
     "browser_ttl = 50 # browser time to live. Quit and restart browser after n number of sessions.\n",
     "\n",
+    "options, service, driver, wait = None, None, None, None\n",
+    "\n",
     "root_path = os.getcwd()\n",
     "browser_bin_path = r'C:\\Program Files\\Mozilla Firefox\\firefox.exe'\n",
     "bin_path = os.path.join(root_path, 'bin')\n",
